force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice_Line</label>
    <nameField>
        <label>Invoice_Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice_Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>