force-app/main/default/objects/Invoice_Line__c/fields/AccountClassification__c.field-meta.xml
<CustomField>
    <fullName>AccountClassification__c</fullName>
    <formula>Location_Id__r.Parent_Enqix_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountClassification</label>
    <type>Text</type>
</CustomField>