force-app/main/default/objects/Invoice_Line__c/fields/AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordType__c</fullName>
    <formula>Invoice_HeaderId__r.AccountRecordType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountRecordType</label>
    <type>Text</type>
</CustomField>