force-app/main/default/objects/Invoice_Line__c/fields/AmountInclVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountInclVAT__c</fullName>
    <label>AmountInclVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>