force-app/main/default/objects/Invoice_Line__c/fields/AnalysisCode__c.field-meta.xml
<CustomField>
    <fullName>AnalysisCode__c</fullName>
    <label>AnalysisCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>