force-app/main/default/objects/Invoice_Line__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>DeliveryDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>