force-app/main/default/objects/Invoice_Line__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <formula>Order__r.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveryDate</label>
    <type>Date</type>
</CustomField>