force-app/main/default/objects/Invoice_Line__c/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <formula>Order__r.Delivery_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveryStatus</label>
    <type>Text</type>
</CustomField>