force-app/main/default/objects/Invoice_Line__c/fields/DirectDebit__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit__c</fullName>
    <formula>Invoice_HeaderId__r.DirectDebit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DirectDebit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>