force-app/main/default/objects/Invoice_Line__c/fields/DiscountWas__c.field-meta.xml
<CustomField>
    <fullName>DiscountWas__c</fullName>
    <label>DiscountWas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>