force-app/main/default/objects/Invoice_Line__c/fields/HeaderStatus__c.field-meta.xml
<CustomField>
    <fullName>HeaderStatus__c</fullName>
    <formula>Invoice_HeaderId__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderStatus</label>
    <type>Text</type>
</CustomField>