force-app/main/default/objects/Invoice_Line__c/fields/Internal__c.field-meta.xml
<CustomField>
    <fullName>Internal__c</fullName>
    <formula>Invoice_HeaderId__r.Internal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>