force-app/main/default/objects/Invoice_Line__c/fields/Invoice_HeaderId__c.field-meta.xml
<CustomField>
    <fullName>Invoice_HeaderId__c</fullName>
    <label>Invoice_HeaderId</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Invoice_Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>