force-app/main/default/objects/Invoice_Line__c/fields/invoice_line_case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>invoice_line_case_safe_id__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice line case safe id</label>
    <type>Text</type>
</CustomField>