force-app/main/default/objects/Invoice_Line__c/fields/InvoiceCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreatedDate__c</fullName>
    <formula>Invoice_HeaderId__r.CreatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceCreatedDate</label>
    <type>Date</type>
</CustomField>