force-app/main/default/objects/Invoice_Line__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <formula>Invoice_HeaderId__r.CreatedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceDate</label>
    <type>Date</type>
</CustomField>