force-app/main/default/objects/Invoice_Line__c/fields/InvoiceMonth__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMonth__c</fullName>
    <formula>MONTH(InvoiceDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>