force-app/main/default/objects/Invoice_Line__c/fields/InvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNo__c</fullName>
    <formula>Invoice_HeaderId__r.InvoiceNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceNo</label>
    <type>Text</type>
</CustomField>