force-app/main/default/objects/Invoice_Line__c/fields/InvoiceNoLine__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNoLine__c</fullName>
    <externalId>true</externalId>
    <label>InvoiceNoLine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>