force-app/main/default/objects/Invoice_Line__c/fields/IsMatched__c.field-meta.xml
<CustomField>
    <fullName>IsMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMatched</label>
    <type>Checkbox</type>
</CustomField>