force-app/main/default/objects/Invoice_Line__c/fields/LineType__c.field-meta.xml
<CustomField>
    <fullName>LineType__c</fullName>
    <label>LineType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>