force-app/main/default/objects/Invoice_Line__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice_Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>