force-app/main/default/objects/Invoice_Line__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>Location_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>