force-app/main/default/objects/Invoice_Line__c/fields/LocationStartDate__c.field-meta.xml
<CustomField>
    <fullName>LocationStartDate__c</fullName>
    <formula>Location_Id__r.Enqix_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LocationStartDate</label>
    <type>Date</type>
</CustomField>