force-app/main/default/objects/Invoice_Line__c/fields/nl_done__c.field-meta.xml
<CustomField>
    <fullName>nl_done__c</fullName>
    <formula>Invoice_HeaderId__r.nl_done__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nl_done</label>
    <type>DateTime</type>
</CustomField>