force-app/main/default/objects/Invoice_Line__c/fields/NominalCode__c.field-meta.xml
<CustomField>
    <fullName>NominalCode__c</fullName>
    <label>Nominal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>