force-app/main/default/objects/Invoice_Line__c/fields/OrderAmount__c.field-meta.xml
<CustomField>
    <fullName>OrderAmount__c</fullName>
    <formula>Order__r.TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>