force-app/main/default/objects/Invoice_Line__c/fields/OrdLineNo__c.field-meta.xml
<CustomField>
    <fullName>OrdLineNo__c</fullName>
    <label>OrdLineNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>