force-app/main/default/objects/Invoice_Line__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Statement__c.Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Statement__c</referenceTo>
    <relationshipLabel>Invoice_Lines</relationshipLabel>
    <relationshipName>InvoiceLines</relationshipName>
    <type>Lookup</type>
</CustomField>