force-app/main/default/objects/Invoice_Line__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <formula>IF(
NOT(ISBLANK(Order__r.PO_Number__c)),
Order__r.PO_Number__c,
IF(
NOT(ISBLANK(Location_Id__r.PO_Number__c)),
Location_Id__r.PO_Number__c,
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Number</label>
    <type>Text</type>
</CustomField>