force-app/main/default/objects/Invoice_Line__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <formula>Location_Id__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode</label>
    <type>Text</type>
</CustomField>