force-app/main/default/objects/Invoice_Line__c/fields/Product_AccCode__c.field-meta.xml
<CustomField>
    <fullName>Product_AccCode__c</fullName>
    <formula>Product__r.Nl_accode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_AccCode</label>
    <type>Text</type>
</CustomField>