force-app/main/default/objects/Invoice_Line__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product_Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>