force-app/main/default/objects/Invoice_Line__c/fields/ProductAnalysisCode__c.field-meta.xml
<CustomField>
    <fullName>ProductAnalysisCode__c</fullName>
    <formula>Product__r.Nl_accode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductAnalysisCode</label>
    <type>Text</type>
</CustomField>