force-app/main/default/objects/Invoice_Line__c/fields/ReverseVAT__c.field-meta.xml
<CustomField>
    <fullName>ReverseVAT__c</fullName>
    <formula>0-VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReverseVAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>