force-app/main/default/objects/Invoice_Line__c/fields/SageDebtorsControlAccount__c.field-meta.xml
<CustomField>
    <fullName>SageDebtorsControlAccount__c</fullName>
    <formula>&apos;1100&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SageDebtorsControlAccount</label>
    <type>Text</type>
</CustomField>