force-app/main/default/objects/Invoice_Line__c/fields/SageExtractCreated__c.field-meta.xml
<CustomField>
    <fullName>SageExtractCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sage Extract Created</label>
    <type>Checkbox</type>
</CustomField>