force-app/main/default/objects/Invoice_Line__c/fields/SageVatAccount__c.field-meta.xml
<CustomField>
    <fullName>SageVatAccount__c</fullName>
    <formula>&apos;2200&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SageVatAccount</label>
    <type>Text</type>
</CustomField>