force-app/main/default/objects/Invoice_Line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status related to the Subcontractor Invoice</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>