force-app/main/default/objects/Invoice_Line__c/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <formula>Order_Product__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcontractor</label>
    <type>Text</type>
</CustomField>