force-app/main/default/objects/Invoice_Line__c/fields/SupplementWas__c.field-meta.xml
<CustomField>
    <fullName>SupplementWas__c</fullName>
    <label>SupplementWas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>