force-app/main/default/objects/Invoice_Line__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Order_Product__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>