force-app/main/default/objects/Invoice_Line__c/fields/Supplier_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Total_Price__c</fullName>
    <formula>Order_Product__r.Supplier_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>