force-app/main/default/objects/Invoice_Line__c/fields/Supplier_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Unit_Price__c</fullName>
    <formula>Order_Product__r.Supplier_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>