force-app/main/default/objects/Invoice_Line__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>