force-app/main/default/objects/Invoice_Line__c/fields/VATCode__c.field-meta.xml
<CustomField>
    <fullName>VATCode__c</fullName>
    <label>VATCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>