force-app/main/default/objects/Invoice_Line__c/fields/WithoutDD__c.field-meta.xml
<CustomField>
    <fullName>WithoutDD__c</fullName>
    <formula>Amount__c*(100-DirectDebit__c)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WithoutDD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>