force-app/main/default/objects/Invoice_Line__c/fields/WorkingDays__c.field-meta.xml
<CustomField>
    <fullName>WorkingDays__c</fullName>
    <formula>(
( FLOOR ( ( DATE (
YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
1 ) - 1 - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( DATE (
YEAR (DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
MONTH(DATE (YEAR(TODAY()),MONTH(TODAY()),28)+5),
1 ) - 1 - DATE (1900,01,01), 7 ) )
) -
(
( FLOOR ( ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01) ) / 7 ) *5 )
+ MIN ( 5, MOD ( DATE(YEAR(TODAY()),MONTH(TODAY()),1) - DATE (1900,01,01), 7 ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkingDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>