force-app/main/default/objects/Invoice_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Id__c</columns>
    <columns>Amount__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>